# oxidepm

./: .gitignore  Cargo.toml  Makefile  README.md
.github/workflows/: ci.yml  release.yml
crates/oxidepm/: Cargo.toml
crates/oxidepm-core/: Cargo.toml
crates/oxidepm-core/src/: config.rs  constants.rs  error.rs  lib.rs  types.rs
crates/oxidepm-db/: Cargo.toml
crates/oxidepm-db/src/: apps.rs  lib.rs  metrics.rs  runs.rs  schema.rs
crates/oxidepm-health/: Cargo.toml
crates/oxidepm-health/src/: lib.rs
crates/oxidepm-ipc/: Cargo.toml
crates/oxidepm-ipc/src/: client.rs  lib.rs  protocol.rs  server.rs
crates/oxidepm-logs/: Cargo.toml
crates/oxidepm-logs/src/: lib.rs  reader.rs  rotation.rs  writer.rs
crates/oxidepm-notify/: Cargo.toml
crates/oxidepm-notify/src/: config.rs  error.rs  event.rs  lib.rs  mock.rs  telegram.rs
crates/oxidepm-runtime/: Cargo.toml
crates/oxidepm-runtime/src/: cargo.rs  cmd.rs  lib.rs  node.rs  npm.rs  rust.rs  traits.rs
crates/oxidepm-tui/: Cargo.toml
crates/oxidepm-tui/src/: lib.rs
crates/oxidepm-watch/: Cargo.toml
crates/oxidepm-watch/src/: debounce.rs  lib.rs  watcher.rs
crates/oxidepm-web/: Cargo.toml
crates/oxidepm-web/src/: lib.rs
crates/oxidepm/src/: cli.rs  main.rs  output.rs
crates/oxidepm/src/commands/: check.rs  delete.rs  describe.rs  flush.rs  kill.rs  logs.rs  mod.rs  notify.rs  ping.rs  restart.rs  resurrect.rs  save.rs  show.rs  start.rs  startup.rs  status.rs  stop.rs
crates/oxidepmd/: Cargo.toml
crates/oxidepmd/src/: daemon.rs  handlers.rs  main.rs  supervisor.rs
scripts/: install.sh
tests/fixtures/: crash-script.js
tests/fixtures/node-project/: package.json  server.js
tests/fixtures/rust-project/: Cargo.toml
tests/fixtures/rust-project/src/: main.rs
