[package]
name = "oxidepm-db"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "SQLite database layer for OxidePM"

[dependencies]
oxidepm-core = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
