[package]
name = "oxidepm-ipc"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "IPC protocol for OxidePM daemon communication"

[dependencies]
oxidepm-core = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
