[package]
name = "oxidepm-web"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Web API server for OxidePM (REST + WebSocket)"

[dependencies]
oxidepm-core = { workspace = true }
oxidepm-ipc = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
futures = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
